<resources>
    <string name="app_name">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_task">Add New Task</string>
    <string name="sync_now">Sync Now</string>
    <string name="send_feedback">Send feedback</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="enter_task_name_here">Enter Task Name Here</string>
    <string name="what_is_to_be_done">What is to be done ?</string>
    <string name="due_date">Due date</string>
    <string name="date_not_set">Date not set</string>
    <string name="time_not_set">Time not set</string>
    <string name="due_time">Due Time</string>
    <string name="cannot_set_a_reminder_for_past">Cannot set a reminder for past.</string>
    <string name="cannot_set_reminder_without_a_name">Cannot set reminder without a name</string>
    <string name="category">Category</string>
    <string name="delete">Delete</string>
    <string name="marked_as_finished">Marked as finished</string>
    <string name="marked_as_missed">Marked as missed</string>
    <string name="username">Username</string>
    <string name="enter_username_here">Enter username here</string>
    <string name="password">Password</string>
    <string name="enter_password_here">Enter password here</string>
    <string name="login">login</string>
    <string name="description">Description</string>
    <string name="enter_few_lines_about_task">Enter few lines about task</string>
    <string name="field_empty">Field empty</string>
    <string name="email">Email</string>
    <string name="enter_email_here">Enter email here</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sign_up">sign up</string>
    <string name="logout">Logout</string>
    <string name="no_tasks_yet_go_add_some">No tasks yet ? Go add some</string>
    <string name="looks_like_there_are_no_upcoming_tasks">Looks like there are no upcoming tasks</string>
    <string name="not_finished_any_tasks_yet">Not finished any tasks yet ?</string>
    <string name="hurray_not_a_single_task_missed">Hurray !!! Not a single task missed</string>
</resources>