<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/baseline_search_white_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/home_menu_add"
        android:title="@string/add_new_task"/>
    <item
        android:id="@+id/home_menu_sync"
        android:title="@string/sync_now"/>
    <item
        android:id="@+id/home_menu_feedback"
        android:title="@string/send_feedback"/>
    <item
        android:id="@+id/home_menu_settings"
        android:title="@string/settings"/>
</menu>