<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".Activities.SignUpActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/signup_name_et"
            style="@style/EditTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="6dp"
            android:hint="@string/enter_username_here"
            android:textColor="@color/black"
            android:textColorHint="#656565" />

        <TextView
            android:id="@+id/signup_error_name"
            android:textColor="@android:color/holo_red_light"
            android:textSize="12sp"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/signup_email_et"
            style="@style/EditTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="6dp"
            android:hint="@string/enter_email_here"
            android:textColor="@color/black"
            android:textColorHint="#656565" />

        <TextView
            android:id="@+id/signup_error_email"
            android:textColor="@android:color/holo_red_light"
            android:textSize="12sp"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/signup_pass_et"
            style="@style/EditTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="6dp"
            android:inputType="textPassword"
            android:hint="@string/enter_password_here"
            android:textColor="@color/black"
            android:textColorHint="#656565" />

        <TextView
            android:id="@+id/signup_error_pass"
            android:textColor="@android:color/holo_red_light"
            android:textSize="12sp"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/signup_btn_submit"
        android:text="@string/sign_up"
        android:layout_margin="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>