<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:id="@+id/holder_add_task"
    tools:context=".AddTaskActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_is_to_be_done"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/add_task_name_et"
            style="@style/EditTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="6dp"
            android:hint="@string/enter_task_name_here"
            android:textColor="@color/black"
            android:textColorHint="#656565" />

        <TextView
            android:id="@+id/add_task_error_name"
            android:text="@string/cannot_set_reminder_without_a_name"
            android:textColor="@android:color/holo_red_light"
            android:textSize="12sp"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/due_date"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/add_task_date_et"
                    style="@style/EditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:editable="false"
                    android:clickable="true"
                    android:textSize="16sp"
                    android:hint="@string/date_not_set"
                    android:textColor="@color/black"
                    android:textColorHint="#656565"
                    android:focusable="true" />

                <TextView
                    android:id="@+id/add_task_error_date"
                    android:text="@string/cannot_set_a_reminder_for_past"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="12sp"
                    android:visibility="invisible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/add_task_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="6dp"
                app:srcCompat="@drawable/baseline_schedule_black_36" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="@color/colorAccent" />

        <Spinner
            android:backgroundTint="@color/black"
            android:popupBackground="@color/white"
            android:id="@+id/add_task_category_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"/>

    </LinearLayout>

</LinearLayout>